--- a/src/main/features/response/views/statement-of-means/dependants/education.njk
+++ b/src/main/features/response/views/statement-of-means/dependants/education.njk
@@ -1,6 +1,5 @@
 {% extends "layout.njk" %}
-{% from "form.njk" import csrfProtection, radioOption, numericInput, saveAndContinueButton, errorSummary %}
-{% from "date.njk" import dateInput %}
+{% from "form.njk" import csrfProtection, numericInput, saveAndContinueButton, errorSummary %}
 
 {% set heading = 'Children aged 16 to 19 living with you' %}
 
