--- a/src/main/features/response/views/statement-of-means/employment/self-employment.njk
+++ b/src/main/features/response/views/statement-of-means/employment/self-employment.njk
@@ -1,5 +1,5 @@
 {% extends "layout.njk" %}
-{% from "form.njk" import csrfProtection, textInput, poundInput, radioOption, textArea, saveAndContinueButton, errorSummary %}
+{% from "form.njk" import csrfProtection, textInput, poundInput, saveAndContinueButton, errorSummary %}
 
 {% set heading = 'What are you self-employed as?' %}
 
