--- a/src/main/features/response/views/statement-of-means/employment/self-employment/on-tax-payments.njk
+++ b/src/main/features/response/views/statement-of-means/employment/self-employment/on-tax-payments.njk
@@ -1,5 +1,5 @@
 {% extends "layout.njk" %}
-{% from "form.njk" import csrfProtection, textInput, poundInput, radioOption, textArea, saveAndContinueButton, errorSummary %}
+{% from "form.njk" import csrfProtection, poundInput, radioOption, textArea, saveAndContinueButton, errorSummary %}
 
 {% set heading = 'Are you behind on tax payments?' %}
 
