--- a/src/main/features/response/views/statement-of-means/explanation.njk
+++ b/src/main/features/response/views/statement-of-means/explanation.njk
@@ -1,5 +1,5 @@
 {% extends "layout.njk" %}
-{% from "form.njk" import csrfProtection, textInput, saveAndContinueButton, errorSummary, textArea %}
+{% from "form.njk" import csrfProtection, saveAndContinueButton, errorSummary, textArea %}
 
 {% set heading = 'Briefly explain why you can`t pay immediately' %}
 
