--- a/src/main/features/claim/views/reason.njk
+++ b/src/main/features/claim/views/reason.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import csrfProtection, emailInput, saveAndContinueButton, errorSummary, textArea %}
 
-{% set heading = t('Why you’re owed the money') %}
+{% set heading = t('Briefly explain your claim') %}
 
 {% block content %}
   <div class="grid-row">
@@ -14,7 +14,10 @@
         <div class="form-group {% if error %} form-group-error {% endif %}">
           <label for="{{ name }}" id="{{ name }}[label]">
             <p class="form-label">
-              {{ t('Briefly explain why you believe the defendant owes you money.') }}
+              {{ t('Tell us why you believe the defendant owes you money.') }}
+            </p>
+
+            <p>{{ t('Don't give us a detailed timeline - we'll ask for that later.') }}
             </p>
 
             {% if error %}
