--- a/src/main/features/claim/views/reason.njk
+++ b/src/main/features/claim/views/reason.njk
@@ -17,7 +17,7 @@
               {{ t('Tell us why you believe the defendant owes you money.') }}
             </p>
 
-            <p>{{ t('Don't give us a detailed timeline - we'll ask for that later.') }}
+            <p>{{ t('Don't give us a detailed timeline - we’ll ask for that later.') }}
             </p>
 
             {% if error %}
