--- a/src/main/features/response/views/response-type.njk
+++ b/src/main/features/response/views/response-type.njk
@@ -75,7 +75,7 @@
 
             {{ radioOption(form = form, name = 'type[value]', value = ResponseType.DEFENCE.value,
               label = 'I reject all of the claim', bold = true,
-              hint = 'You've either paid what you believe you owe or you reject the claim'
+              hint = 'You’ve either paid what you believe you owe or you reject the claim'
             )}}
 
           </fieldset>
