--- a/src/main/features/claim/views/check-and-send.njk
+++ b/src/main/features/claim/views/check-and-send.njk
@@ -107,7 +107,7 @@
     {{ tableEnd() }}
 
     {{ tableStart('claimDetails', 'Claim details') }}
-    {{ row('Why you’re owed the money:', draftClaim.reason.reason, paths.reasonPage.uri, bold = true ) }}
+    {{ row('Why you believe you’re owed the money:', draftClaim.reason.reason, paths.reasonPage.uri, bold = true ) }}
     {{
       timelineCheckAndSend(
         header = 'Timeline of what happened',
