--- a/src/main/features/claim/views/total.njk
+++ b/src/main/features/claim/views/total.njk
@@ -56,6 +56,27 @@
             </tbody>
           </table>
 
+          <table class="table-form form-group">
+            <caption class="visuallyhidden"></caption>
+            <thead>
+              <tr>
+                <th scope="col">{{ t('Other fees') }}</th>
+                <th class="numeric last" scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <th scope="row">{{ t('Hearing fee') }}</th>
+              <td class="numeric last">
+                <label class="visuallyhidden" for="amount">{{ t('Hearing fee') }}</label>
+                <span class="font-small">{{ hearingFee | numeral }}</span>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+
+          <p>{{ t('You don’t have to pay a hearing fee unless the claim goes to a hearing.') }}</p>
+
           {{ feesTable('How these fees are calculated', feeTableContent , showHearingFee = true) }}
 
         </fieldset>
