--- a/src/main/features/response/views/confirmation.njk
+++ b/src/main/features/response/views/confirmation.njk
@@ -11,7 +11,7 @@
       <div class="govuk-box-highlight">
         <h1 class="bold-large">{{ t('You’ve submitted your response') }}</h1>
         <p class="reference-number">
-          <span>{{ t('Your claim number:') }}</span>
+          <span>{{ t('Your claim reference:') }}</span>
           <span class="block bold-large">{{ claim.claimNumber }}</span>
         </p>
         <p>
