--- a/src/main/features/response/views/confirmation/full-admission.njk
+++ b/src/main/features/response/views/confirmation/full-admission.njk
@@ -1,4 +1,5 @@
 {% set claimantName = claim.claimData.claimant.name %}
+{% set claimantDetailsPageURI = ClaimPaths.claimantDetailsPage.evaluateUri({ externalId: claim.externalId }) %}
 
 {% if claim.response.paymentOption === domain.PaymentOption.IMMEDIATELY %}
   <p>{{ t('We’ve emailed {{ claimantName }} to tell them you’ll pay immediately.', { claimantName: claimantName }) }}</p>
@@ -11,7 +12,7 @@
     <li>{{ t('you get a receipt for any payments') }}</li>
   </ul>
 
-  <p>{{ t('Contact {{ claimantName }} if you need their payment details.', { claimantName: claimantName }) }}</p>
+  <p>{{ t('<a href="{{ link }}">Contact {{ claimantName }}</a> if you need their payment details.', { claimantName: claimantName, link: claimantDetailsPageURI }) | safe }}</p>
 {% endif %}
 
 {% if claim.response.paymentOption === domain.PaymentOption.FULL_BY_SPECIFIED_DATE %}
