--- a/src/main/features/response/views/statement-of-means/employment/self-employment/on-tax-payments.njk
+++ b/src/main/features/response/views/statement-of-means/employment/self-employment/on-tax-payments.njk
@@ -8,7 +8,7 @@
     <div class="column-two-thirds">
       <form method="post" novalidate
         class="analytics-submit-event-trigger"
-        data-event-action="SoM: What are you self-employed as"
+        data-event-action="SoM: Are you behind on tax payments?"
         data-event-label-from="declared">
 
         {{ csrfProtection(csrf) }}
