--- a/src/main/features/response/views/reject-part-of-claim.njk
+++ b/src/main/features/response/views/reject-part-of-claim.njk
@@ -1,39 +1,24 @@
 {% extends "layout.njk" %}
-{% from "form.njk" import csrfProtection, radioGroup, saveAndContinueButton, errorSummary %}
-{% from "table.njk" import tableStart, tableEnd, row, rowWithMultipleValue %}
+{% from "form.njk" import csrfProtection, yesNoRadio, saveAndContinueButton, errorSummary %}
 
-{% set heading = 'I reject part of the claim' %}
+{% set heading = 'Have you paid the claimant the amount you admit you owe?' %}
 
 {% block content %}
   <div class="grid-row">
     <div class="column-two-thirds">
 
-      <form method="post" class="analytics-submit-event-trigger" data-event-action="Response: Select part admission option" data-event-label-from="option" novalidate>
+      <form method="post"
+        class="analytics-submit-event-trigger"
+        data-event-action="Response: Select part admission option"
+        data-event-label-from="option"
+        novalidate>
+
         {{ csrfProtection(csrf) }}
 
-        <legend class="visually-hidden">{{ t('I reject part of the claim') }}</legend>
-
-        {{
-          radioGroup(
-          label = 'Why are you rejecting part of this claim?',
-          name = 'option',
-          options = [
-            {
-              label: 'The claim amount is too much',
-              value: 'amountTooHigh'
-            },
-            {
-              label: 'I’ve paid what I believe I owe',
-              value: 'paidWhatBelievedWasOwed'
-            }
-          ],
-          form = form
-          )
-        }}
+        {{ yesNoRadio(label = heading, name = 'option', form = form, isInline = true) }}
 
         {{ saveAndContinueButton() }}
       </form>
     </div>
   </div>
 {% endblock %}
-
