Fixed small issued e.g.  clearing validation

--- a/src/main/features/response/views/statement-of-means/monthly-income.njk
+++ b/src/main/features/response/views/statement-of-means/monthly-income.njk
@@ -58,7 +58,7 @@
         {% endif %}
       </div> #}
 
-      <p id="total" class="heading-small">
+      <p class="heading-small">
         Total monthly income: £<span class="total-monthly-income-expense"> {{ totalMonthlyIncomeExpense | default('0.00') }} </span>
       </p>
 
