--- a/src/main/features/response/views/partial-admission/how-much-have-you-paid.njk
+++ b/src/main/features/response/views/partial-admission/how-much-have-you-paid.njk
@@ -12,7 +12,7 @@
 
       {{ csrfProtection(csrf) }}
 
-      <p>{{ t('The total amount claimed is £1,500. This includes the claim fee and any interest.') }}</p>
+      <p>{{ t('The total amount claimed is {{ totalAmount }}. This includes the claim fee and any interest.', { totalAmount: totalAmount | numeral }) }}</p>
 
       {{ poundInput(label = '', name = 'amount', form = form) }}
 
