--- a/src/main/features/response/views/partial-admission/how-much-have-you-paid.njk
+++ b/src/main/features/response/views/partial-admission/how-much-have-you-paid.njk
@@ -1,8 +1,9 @@
 {% extends "layout.njk" %}
 
-{% set heading = 'How much money do you admit you owe?' %}
+{% set heading = 'How much have you paid the claimant?' %}
 
-{% from "form.njk" import saveAndContinueButton, csrfProtection, poundInput, errorSummary %}
+{% from "form.njk" import poundInput, textArea, saveAndContinueButton, csrfProtection, errorSummary %}
+{% from "date.njk" import dateInput %}
 
 {% block content %}
 <div class="grid-row">
@@ -15,7 +16,12 @@
       <p>{{ t('The total amount claimed is {{ totalAmount }}. This includes the claim fee and any interest.',
                 { totalAmount: totalAmount | numeral }) }}</p>
 
-      {{ poundInput(label = '', name = 'amount', form = form) }}
+      {{ poundInput(label = 'How much have you paid?', name = 'amount', form = form, bold = true) }}
+
+      <h4 class="heading-small">{{ t('When did you pay this amount?') }}</h4>
+      {{ dateInput(name = 'date', form = form) }}
+
+      {{ textArea(label = 'Explain why you don’t owe the full amount.', name = 'text', form = form, bold = true) }}
 
       {{ saveAndContinueButton() }}
     </form>
