--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -35,8 +35,8 @@
     {% if draft.response.type === ResponseType.PART_ADMISSION %}
       {{
         row(
-          label = 'TODO Why are you rejecting part of this claim?',
-          value = t('TODO Partially admitted'),
+          label = 'Have you paid the claimant the amount you admit you owe?	TODO',
+          value = t('TODO GET YesNOoOption'),
           changeLink = PartAdmissionPaths.alreadyPaidPage.evaluateUri({ externalId: claim.externalId }),
           bold = true
         )
@@ -86,45 +86,34 @@
       {{ tableEnd() }}
     {% endif %}
 
+
     {% if draft.response.type === ResponseType.PART_ADMISSION and featureToggles.partialAdmission %}
 
       {{ tableStart('yourResponse', 'Your response') }}
 
-      {% if draft.rejectPartOfClaim.option === RejectPartOfClaimOption.AMOUNT_TOO_HIGH %}
-        {{ row(label = 'How much money do you believe you owe?', value = draft.howMuchOwed.amount | numeral, changeLink = ResponsePaths.defendantHowMuchOwed.evaluateUri({ externalId: claim.externalId }), bold = true) }}
-        {{ row(label = 'Why this is what you owe?', value = draft.howMuchOwed.text, changeLink = ResponsePaths.defendantHowMuchOwed.evaluateUri({ externalId: claim.externalId }), bold = true) }}
-      {% endif %}
+      {% if draft.isResponsePartiallyAdmitted() %}
+        {{ row(label = 'How much money have you paid?', value = draft.partialAdmission.howMuchHaveYouPaid.amount | numeral, changeLink = PartAdmissionPaths.howMuchHaveYouPaid.evaluateUri({ externalId: claim.externalId }), bold = true) }}
+        {{ row(label = 'When did you pay this amount?', value = draft.partialAdmission.howMuchHaveYouPaid.date.toMoment() | date, changeLink = PartAdmissionPaths.howMuchHaveYouPaid.evaluateUri({ externalId: claim.externalId }), bold = true) }}
+        {{ row(label = 'How did you pay the amount claimed?', value = draft.partialAdmission.howMuchHaveYouPaid.text, changeLink = PartAdmissionPaths.howMuchHaveYouPaid.evaluateUri({ externalId: claim.externalId }), bold = true) }}
 
-      {% if draft.rejectPartOfClaim.option === RejectPartOfClaimOption.PAID_WHAT_BELIEVED_WAS_OWED %}
-        {{ row(label = 'How much have you paid the claimant?', value = draft.howMuchIsPaid.amount | numeral, changeLink = ResponsePaths.defendantHowMuchPaid.evaluateUri({ externalId: claim.externalId }), bold = true) }}
-        {{ row(label = 'When did you pay this amount?', value = draft.howMuchIsPaid.date.toMoment() | date, changeLink = ResponsePaths.defendantHowMuchPaid.evaluateUri({ externalId: claim.externalId }), bold = true) }}
-        {{ row(label = 'Explain why you don’t owe the full amount', value = draft.howMuchIsPaid.text, changeLink = ResponsePaths.defendantHowMuchPaid.evaluateUri({ externalId: claim.externalId }), bold = true) }}
-      {% endif %}
-
-      {{
+        {{
         timelineCheckAndSend(
-          header = 'Timeline of what happened (optional)',
-          timeline = draft.timeline.getPopulatedRowsOnly(),
-          url = ResponsePaths.timelinePage.evaluateUri({ externalId: claim.externalId })
+        header = 'Timeline of what happened (optional)',
+        timeline = draft.partialAdmission.timeline.getPopulatedRowsOnly(),
+        url = ResponsePaths.timelinePage.evaluateUri({ externalId: claim.externalId })
         )
-      }}
-      {{
-        evidenceCheckAndSend(
-          header = 'Your evidence (optional)',
-          evidence = draft.evidence.getPopulatedRowsOnly(),
-          url = ResponsePaths.evidencePage.evaluateUri({ externalId: claim.externalId })
-        )
-      }}
+        }}
+        {{ row(label = 'Comments about their timeline (optional)', value = draft.timeline.comment | default(''), bold = true) }}
 
-      {% if draft.isResponseRejectedPartially() %}
-        {% if draft.impactOfDispute.text and draft.impactOfDispute.text.trim() %}
-          {% set impactOfDisputeText = draft.impactOfDispute.text %}
-        {% else %}
-          {% set impactOfDisputeText = '-' %}
-        {% endif %}
-        {{ row(label = 'How this dispute has affected you (optional)', value = impactOfDisputeText, changeLink = ResponsePaths.impactOfDisputePage.evaluateUri({ externalId: claim.externalId }), bold = true) }}
+        {{
+        evidenceCheckAndSend(
+        header = 'Your evidence (optional)',
+        evidence = draft.partialAdmission.evidence.getPopulatedRowsOnly(),
+        url = ResponsePaths.evidencePage.evaluateUri({ externalId: claim.externalId })
+        )
+        }}
+
       {% endif %}
-      {{ tableEnd() }}
 
     {% endif %}
 
